fix overlapping underline and text

--- a/styles/about.css
+++ b/styles/about.css
@@ -86,6 +86,7 @@ section.chapter p {
     line-height: 1.5rem;
 }
 section.chapter h2 {
+    line-height: 200%;
     margin-bottom: 1.5rem;
     text-decoration: underline 6px var(--decoration-color);
     text-underline-offset: .4em;
